@@ -1,3 +1,12 @@
+2011-11-11  David Kilzer  <ddkilzer@apple.com>
+
+        <http://webkit.org/b/71921> Remove use of strcpy in KURL
+
+        Reviewed by Antti Koivisto.
+
+        * platform/KURL.cpp:
+        (WebCore::KURL::init): Replace strcpy() with strncpy().
+
 2011-11-11  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         De-virtualize supportsProfiling, supportsRichSourceInfo, shouldInterruptScript in JSGlobalObject
